--- a/css/modern-business.css
+++ b/css/modern-business.css
@@ -27,3 +27,14 @@ body {
 .portfolio-item {
   margin-bottom: 30px;
 }
+.carousel-caption{
+    background-size:1px;
+    font-size:50px;
+    color:white;
+    font-style:bold;
+    
+}
+
+h1,h2,h3{
+    font-size:60px;
+}
