--- a/css/style.css
+++ b/css/style.css
@@ -1,1 +1,12 @@
 /* Site Styles Go Here */
+
+.footer-flex{
+    
+    display:flex;
+    flex-direction:row;
+    justify-content:space-around;
+}
+
+.footer-item-flex{
+    flex:0 1 auto;
+}
